trying to fix read more and contact me buttoms, on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,6 +100,7 @@
 .readme {
   position: relative;
   padding: 11px 35px;
+  z-index: 10;
   background: #fff;
   color: #00796b;
   border: 2px solid #fff;
@@ -118,6 +119,7 @@
 
 .contactme {
   position: relative;
+  z-index: 10;
   padding: 11px 35px;
   background: none;
   color: #fff;
@@ -373,6 +375,7 @@ h3 {
 }
 
 .overlay {
+  pointer-events: none;
   background-color: rgba(0, 0, 0, 0.4);
   height: 100%;
   left: 0;
